<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="View Pokeball/Editing"
            android:textColor="@color/tutorial_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:padding="16dp"
            android:text="@string/tutorial_normal_text_07a"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/tutorialnormal07a" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:padding="16dp"
            android:text="@string/tutorial_normal_text_07b"
            android:textColor="@color/dark_grey"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:src="@drawable/tutorialnormal07b" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:padding="16dp"
            android:text="@string/tutorial_normal_text_07c"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:layout_marginBottom="60dp"/>

    </LinearLayout>
</ScrollView>