<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="BASIC APP CONCEPT"
            android:textColor="@color/tutorial_title"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/shape_rectangle_clear">

            <TextView
                android:id="@+id/tutorial_contents_whatareivs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/tutorial_normal_text_00a"
                android:textSize="20sp"
                 />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="56dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tutorial_contents_whatdoesappdo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/tutorial_normal_text_00b"
                android:textSize="20sp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="56dp"
                android:layout_marginRight="56dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tutorial_contents_howtousenormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:paddingBottom="12dp"
                android:paddingTop="12dp"
                android:text="@string/tutorial_normal_text_00c"
                android:textSize="20sp"
                 />
        </LinearLayout>


    </LinearLayout>
</ScrollView>